# y2karaoke

./: .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BOOTSTRAP_IMPROVEMENT_PROGRESS.md  CLAUDE.md  CRITICAL_PRIORITIES.md  LYRICS_REFACTOR_PLAN.md  Makefile  NEXT_SESSION_TODO.md  README.md  REFACTORING.md  TIMING_IMPROVEMENT_PLAN.md  TIMING_STRATEGY_IMPROVEMENT_PROGRESS.md  WARP.md  anti_hero_refined.json  bohemian_verified.json  calculate_corrected_deltas.py  codecov.yml  debug_levitating_dedup_final.html  downloader.py  improvements_summary.py  karaoke.py  lyrics.py  migrate.py  papaoutai.txt  papaoutai_lenient.json  papaoutai_timing.json  papaoutai_timing5.json  papaoutai_timing_report.json  papaoutai_timing_report_fixed.json  papaoutai_timing_temp0.5_short.json  pyproject.toml  refactor_whisper.py  renderer.py  requirements.txt  requirements_dev.txt  requirements_minimal.txt  run_visual_eval.py  separator.py  (+8 more)
.github/workflows/: test.yml
backup_old_structure/: audio_effects.py  backgrounds.py  lyrics.py  separator.py
benchmarks/: benchmark_songs.yaml  curated_canary_guardrails.json  curated_clip_songs.yaml  main_benchmark_guardrails.json  main_benchmark_songs.yaml  main_dev_songs.yaml  visual_benchmark_songs.yaml  visual_dev_songs.yaml  visual_eval_guardrails.json
benchmarks/gold_set/: 01_queen-bohemian-rhapsody.gold.json  02_billie-eilish-bad-guy.gold.json  03_ed-sheeran-shape-of-you.gold.json  04_dua-lipa-levitating.gold.json  05_bruno-mars-uptown-funk.gold.json  06_onerepublic-counting-stars.gold.json  07_coldplay-viva-la-vida.gold.json  07_the-weeknd-blinding-lights.gold.json  08_imagine-dragons-believer.gold.json  08_the-weeknd-blinding-lights.gold.json  09_imagine-dragons-believer.gold.json  09_stromae-papaoutai.gold.json  10_indila-derniere-danse.gold.json  10_stromae-papaoutai.gold.json  11_indila-derniere-danse.gold.json  11_rosalia-despecha.gold.json  12_j-balvin-mi-gente.gold.json  12_rosalia-despecha.gold.json  13_j-balvin-mi-gente.gold.json  13_taylor-swift-anti-hero.gold.json  13_the-weeknd-blinding-lights.gold.json  14_taylor-swift-anti-hero.gold.json
benchmarks/gold_set_karaoke_seed/: 01_queen-bohemian-rhapsody.gold.json  01_queen-bohemian-rhapsody.visual.gold.json  02_billie-eilish-bad-guy.gold.json  02_billie-eilish-bad-guy.visual.gold.json  03_ed-sheeran-shape-of-you.gold.json  03_ed-sheeran-shape-of-you.visual.gold.json  04_dua-lipa-levitating.gold.json  04_dua-lipa-levitating.visual.gold.gold.json  04_dua-lipa-levitating.visual.gold.json  05_bruno-mars-uptown-funk.visual.gold.json  06_onerepublic-counting-stars.visual.gold.json  07_coldplay-viva-la-vida.visual.gold.json  07_the-weeknd-blinding-lights.visual.gold.json  08_imagine-dragons-believer.visual.gold.json  08_the-weeknd-blinding-lights.visual.gold.json  09_stromae-papaoutai.visual.gold.json  10_indila-derniere-danse.visual.gold.json  (+6 more)
docs/: README.md  check_visual_suitability.md  curated_clips.md  development.md  gold_timing_editor.md  karaoke_visual_bootstrap.md  logic-audit.md  pipeline-subsystems.md  project_status.md  tech_debt_backlog.md  whisper_alignment_strategy.md
tests/: README.md  conftest.py  test_alignment.py  test_audio_effects.py  test_audio_processing.py  test_audio_utils.py  test_backgrounds.py  test_backgrounds_unit.py  test_break_shortener_additional.py  test_break_shortener_detection.py  test_cache.py  test_cli_additional.py  test_cli_helpers.py  test_downloader.py  test_e2e.py  test_fetch.py  test_fixtures.py  test_fonts.py  test_frame_renderer.py  test_frame_renderer_additional.py  test_genius_duet.py  test_genius_fetch.py  test_genius_integration.py  test_genius_unit.py  test_integration_network.py  test_karaoke.py  test_karaoke_cache_unit.py  test_karaoke_generate.py  test_karaoke_helpers.py  test_karaoke_rendering.py  test_logging_utils.py  test_lrc_metadata.py  test_lyrics.py  test_lyrics_additional.py  test_lyrics_helpers.py  test_lyrics_pipeline.py  test_lyrics_quality_unit.py  test_lyrics_unit.py  test_models.py  test_original.py  (+54 more)
tools/: analyze_advisory_support_candidates.py  analyze_aggregate_merge_pack.py  analyze_aggregate_segment_merges.py  analyze_agreement_anchor_clipping.py  analyze_agreement_skip_reasons.py  analyze_agreement_tradeoffs.py  analyze_alignment_candidate_starts.py  analyze_alignment_stage_effects.py  analyze_alternating_hook_family.py  analyze_alternating_hook_lyrics_hits.py  analyze_anchor_outside_window_recovery.py  analyze_block_source_substitution_opportunities.py  analyze_clipped_agreement_pack.py  analyze_contaminated_gap_effects.py  analyze_contaminated_gap_pack.py  analyze_continuous_vocals_handoff.py  analyze_forced_advisory_candidate_blockers.py  analyze_forced_trace_baseline_carryover.py  analyze_forced_trace_exact_segment_boundaries.py  analyze_forced_trace_sustained_repairs.py  analyze_forced_trace_transcription_support_gaps.py  analyze_fuzzy_segment_support_variants.py  analyze_gold_onset_bias.py  analyze_interstitial_vocal_contamination.py  analyze_later_segment_start_regressions.py  analyze_line_error_patterns.py  analyze_line_support_variants.py  analyze_long_gap_shift_candidates.py  analyze_lrc_refinement_stages.py  analyze_lyrics_source_disagreement.py  analyze_mapper_assignment_confidence.py  analyze_merge_reuse_pressure.py  analyze_override_opportunities.py  analyze_phonetic_line_support.py  analyze_pre_whisper_end_compression.py  analyze_pre_whisper_live_path.py  analyze_pre_whisper_retained_lines.py  analyze_pre_whisper_support_gaps.py  analyze_repeated_line_drift.py  analyze_repeated_line_start_harmonization_candidates.py  (+74 more)
(+730 files in other folders)
